# doc_recon

./: .gitignore  README.md  docker-compose.yml  eval.py  full_results.txt  pyproject.toml  pytest_full.txt  quick_results.txt  requirements.txt  test_debug.py  test_extreme.py  test_output.txt  test_results.txt  test_scenarios.py
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: classical_cv_layout.md  project_report.md
examples/: generate_low_contrast.py  generate_samples.py
examples/expected_outputs/: .gitkeep  sample_math.json  sample_multicol.json  sample_table.json
examples/sample_pages/: .gitkeep
src/: __init__.py  app.py  cli.py  config.py
src/utils/: __init__.py  assembler.py  export.py  images.py  io.py  layout.py  ocr_math.py  ocr_text.py  tables.py
tests/: __init__.py  test_end2end.py  test_layout.py  test_ocr_math.py  test_ocr_text.py  test_preprocessing.py  test_tables.py
